Stop tooltip flickering.

--- a/assets/sass/admin/analytics/_analytics.scss
+++ b/assets/sass/admin/analytics/_analytics.scss
@@ -46,4 +46,8 @@
         bottom: 0;
         right: 0;
     }
+
+    svg > g > g:last-child {
+        pointer-events: none;
+    }
 }
